fix: project card

--- a/src/components/common/ProjectCard/ProjectCardContent/styles.module.scss
+++ b/src/components/common/ProjectCard/ProjectCardContent/styles.module.scss
@@ -32,6 +32,7 @@
       width: 70%;
       padding: 0.8rem 0;
       display: flex;
+      color: $color-white;
       justify-content: space-evenly;
       align-items: center;
       border: $border-gray-light;
