fix: added more members & added check on length

--- a/src/components/common/ProjectCard/styles.module.scss
+++ b/src/components/common/ProjectCard/styles.module.scss
@@ -8,6 +8,7 @@
     padding: 2.4rem;
     &__project-card-image {
       position: relative;
+      height: 46.4rem;
     }
     &__project-card-content {
       position: absolute;
