--- a/src/components/common/ProjectCard/ProjectCardTeam/styles.module.scss
+++ b/src/components/common/ProjectCard/ProjectCardTeam/styles.module.scss
@@ -7,6 +7,7 @@
   top: 0;
   left: 0;
   background: $linear-gradient-black;
+  border-radius: 0.4rem;
   &__close-icon {
     background: none;
     border: none;
