--- a/src/components/MainPage/Projects/styles.module.scss
+++ b/src/components/MainPage/Projects/styles.module.scss
@@ -58,6 +58,14 @@
     gap: 0.8rem;
     padding-bottom: 3.2rem;
     cursor: pointer;
+    &:hover {
+      .projects-section__load-more__text {
+        border-bottom: 1px solid #121212;
+      }
+    }
+    &__text {
+      padding-bottom: 0.4rem;
+    }
     &__container {
       display: flex;
       justify-content: center;
