--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -11,16 +11,20 @@ $color-started: #eb903c;
 $color-neutral-text: #353535;
 $color-hover-btn: #ffbd00;
 $color-pressed-btn: #fd9b00;
-
-// FONTS
-$font-primary: 'Exo 2', sans-serif;
-$font-secondary: 'Inter', sans-serif;
-
-// BORDERS
+//MODAL
+$modal-backdrop-color: #ececec;
+$modal-window-color: #ffffff;
+//BORDERS
 $border-black: 1px solid $color-black;
 $border-gray: 1px solid $color-gray;
 $border-gray-light: 1px solid rgba(252, 252, 252, 0.5);
 $border-white: 1.5px solid $color-white;
+//ADMIN
+$frame-white: #fffefa;
+
+// FONTS
+$font-primary: 'Exo 2', sans-serif;
+$font-secondary: 'Inter', sans-serif;
 
 // Linear-gradients
 $linear-gradient-black: linear-gradient(
@@ -38,7 +42,3 @@ $linear-gradient-white: linear-gradient(
   rgba(252, 252, 252, 0) 60%,
   rgba(255, 255, 255, 0.02) 100%
 );
-
-//MODAL
-$modal-backdrop-color: #ececec;
-$modal-window-color: #ffffff;
