--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -21,6 +21,7 @@ $border-gray-light: 1px solid rgba(252, 252, 252, 0.5);
 $border-white: 1.5px solid $color-white;
 //ADMIN
 $frame-white: #fffefa;
+$input-placeholder: #939393;
 
 // FONTS
 $font-primary: 'Exo 2', sans-serif;
