--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -22,6 +22,8 @@ $border-white: 1.5px solid $color-white;
 //ADMIN
 $frame-white: #fffefa;
 $input-placeholder: #939393;
+$input-focused-border: #262626;
+$input-error: #ff4314;
 
 // FONTS
 $font-primary: 'Exo 2', sans-serif;
