--- a/src/components/AdminPage/Authorization/styles.module.scss
+++ b/src/components/AdminPage/Authorization/styles.module.scss
@@ -12,7 +12,7 @@
   flex-direction: column;
   align-items: flex-start;
   width: 32.5rem;
-  height: 42.8rem;
+  min-height: 42.8rem;
   padding: 2rem;
   gap: 3.2rem;
   background: $frame-white;
