--- a/src/components/common/InputFields/TextInput/styles.module.scss
+++ b/src/components/common/InputFields/TextInput/styles.module.scss
@@ -56,6 +56,5 @@
 .icon-wrapper {
   position: absolute;
   top: 0.8rem;
-  right: -94%; /* Adjust the position as desired */
-  //transform: translateY(-50%);
+  right: 0.8rem;
 }
