--- a/src/components/Admin/Sidebar/styles.module.scss
+++ b/src/components/Admin/Sidebar/styles.module.scss
@@ -1,10 +1,24 @@
 .sidebar-wrapper {
 	width: 11.5rem;
-	margin: 0 auto;
+
+	&--extended {
+		width: 24rem;
+	}
 }
 .sidebar-logo {
 	padding: 1.8rem 0;
 	background:$color-accent;
+
+	&--extended {
+		display: flex;
+	}
+}
+
+.sidebar-logo__link--extended {
+display: block;
+width: 6.8rem;
+margin-left: 3.2rem;
+margin-right: auto;
 }
 
 .sidebar-logo__svg {
@@ -13,10 +27,24 @@
 
 	width: 6.8rem;
 	height: 6.8rem;
+
+	&--extended {
+		margin-left: 3.2rem;
+		margin-right: auto;
+	}
+}
+
+.sidebar-logo__close-svg {
+	display: block;
+	width: 4rem;
+	height: 4rem;
+	background:$color-black;
+	margin: auto 0;
+	border-radius:0.4rem;
 }
 
 .sidebar-menu {
-	border: 1px solid black;
+	border: 1px solid $color-black;
 	border-top: 0;
 }
 
@@ -28,24 +56,7 @@
 	margin: 1.6rem auto;
 
 	box-sizing: content-box;
-	width: 4.7rem;	
 	display: block;
-
-	border-radius: 4px;
-
-	&--accent {
-		background: $color-black-light;
-		.sidebar-list__item-icon {
-			fill: $color-white;
-		}
-	}
-
-	// &:hover {
-	// 	background: $color-black-light;
-	// }
-	// &:hover &-icon {
-	// 	fill: $color-white;
-	// }
 
 	&:first-child {
 		margin-top: 0;
@@ -55,18 +66,44 @@
 	}
 }
 
-.sidebar-list__item-link {
+.sidebar-list__button {
 
 	display: flex;
-	justify-content: center;
+	align-items: center;
+	margin: 0 auto;
+
+	cursor: pointer;
+	background-color: $color-white;
+	border: 0;
+	border-radius: 4px;
 	width: 4.7rem;
 	height: 4rem;
+
+	&--accent {
+		background: $color-black-light;
+		.sidebar-list__item-icon {
+			fill: $color-white;
+		}
+		.sidebar-list__text {
+			color: $color-white;
+		}
+	}
+
+	&--extended {
+		padding: 0.8rem 1.2rem;
+		width: 17rem;
+	}
 }
+
 
 .sidebar-list__item-icon {
 	display: block;
 	margin: 0 auto;
 	width: 2.4rem;
+	&--extended {
+		margin: 0;
+		margin-right: 1rem;
+	}
 }
 
 .log-out {
@@ -90,4 +127,3 @@
 	margin: 0 auto;
 	width: 2.4rem;
 }
-
