--- a/src/components/common/InputFields/TextInput/styles.module.scss
+++ b/src/components/common/InputFields/TextInput/styles.module.scss
@@ -1,3 +1,7 @@
+.container {
+  width: 100%;
+}
+
 .title {
   font-size: 1.6rem;
   margin-bottom: 3.2rem;
@@ -8,10 +12,10 @@
 }
 
 .input {
-  width: 28.5rem;
+  width: 100%;
   height: 4rem;
   background: $color-white;
-  border: 0.5px solid $color-gray;
+  border: $border-gray;
   border-radius: 0.4rem;
   padding: 0.8rem;
   color: $color-neutral-text;
@@ -25,7 +29,8 @@
     color: $input-placeholder;
   }
 
-  &:focus {
+  &:focus,
+  &:focus-visible {
     border-color: $input-focused-border;
   }
 }
@@ -39,12 +44,12 @@
   }
 
   &-border {
-    border: 0.5px solid $input-error;
+    border: $border-error;
   }
 
   &-border:focus,
   &-border:focus-visible {
-    border: 0.5px solid $input-error;
+    border: $border-error;
   }
 }
 
