--- a/src/components/Admin/Sidebar/MenuItem/styles.module.scss
+++ b/src/components/Admin/Sidebar/MenuItem/styles.module.scss
@@ -1,55 +1,40 @@
-.sidebar-list {
-  padding: 4rem 0;
-}
-
-.sidebar-list__item {
-  margin: 1.6rem auto;
-
-  box-sizing: content-box;
-  display: block;
-
-  &:first-child {
-    margin-top: 0;
-  }
-  &:last-child {
-    margin-bottom: 0;
-  }
-}
-
 .sidebar-list__button {
   display: flex;
+  width: 4.7rem;
+  height: 4rem;
   align-items: center;
-  margin: 0 auto;
-
+  justify-content: center;
+  font-size: 1.6rem;
+  font-family: $font-primary;
   cursor: pointer;
   background-color: $color-white;
   border: 0;
   border-radius: 4px;
-  width: 4.7rem;
-  height: 4rem;
 
   &--accent {
-    background: $color-black-light;
+    background: $color-black;
+
     .sidebar-list__item-icon {
       fill: $color-white;
     }
+
     .sidebar-list__text {
       color: $color-white;
     }
   }
 
   &--extended {
-    padding: 0.8rem 1.2rem;
-    width: 17rem;
+    padding: 0rem 1.2rem;
+    width: 17.7rem;
+    height: 4rem;
+    justify-content: flex-start;
+
+    & .sidebar-list__item-icon {
+      margin-right: 1rem;
+    }
   }
 }
 
 .sidebar-list__item-icon {
-  display: block;
-  margin: 0 auto;
   width: 2.4rem;
-  &--extended {
-    margin: 0;
-    margin-right: 1rem;
-  }
 }
