--- a/src/components/Admin/Sidebar/MenuItem/styles.module.scss
+++ b/src/components/Admin/Sidebar/MenuItem/styles.module.scss
@@ -1,5 +1,6 @@
 .sidebar-list__item {
   display: flex;
+  position: relative;
   flex-direction: column;
   transition: all 0.3s ease-in-out;
   gap: 0.4rem;
@@ -20,7 +21,6 @@
   border-radius: 4px;
   gap: 0.8rem;
   transition: width 0.3s ease-in-out;
-  overflow: hidden;
 
   &--accent {
     background: $color-black;
@@ -55,33 +55,68 @@
 }
 
 .sidebar-list__submenu {
-  display: flex;
+  position: absolute;
+  display: inline-flex;
+  padding: 0.1rem 1.4rem 0.4rem 1.4rem;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
-  justify-content: flex-end;
-  align-items: flex-start;
-  gap: 0.4rem;
+  left: 7rem;
+  top: 0;
+  border-radius: 4px;
+  border: $border-gray;
+  background: $color-white;
 
-  .submenu-opened ~ & {
+  .sidebar-list__button--extended ~ & {
+    position: static;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: flex-start;
+    gap: 0.4rem;
+    border: none;
+    padding: 0;
+  }
+
+  .submenu-closed ~ & {
     display: none;
   }
 }
 
 .sidebar-logo__close-svg {
-  display: flex;
   position: absolute;
-  right: 1.2rem;
-  top: 0.8rem;
+  display: flex;
   justify-self: flex-end;
   justify-content: center;
   align-items: center;
   width: 2.4rem;
   height: 2.4rem;
-  //fill: $color-black;
-  //background: $color-black;
-  //border-radius: 4px 0px 0px 4px;
-  transform: rotate(0.75turn);
+  position: absolute;
+  right: -2.8rem;
+  top: 0.8rem;
+  fill: $color-black;
+  transform: rotate(0.5turn);
 
-  .submenu-opened & {
+  .sidebar-list__button--extended & {
+    transform: rotate(0.75turn);
+    position: absolute;
+    right: 1.2rem;
+    top: 0.8rem;
+  }
+
+  .submenu-closed.sidebar-list__button--extended & {
     transform: rotate(0.25turn);
+  }
+
+  .submenu-closed & {
+    transform: rotate(1turn);
+  }
+
+  .sidebar-list__button--accent & {
+    fill: $color-black;
+  }
+
+  .sidebar-list__button--accent.sidebar-list__button--extended & {
+    fill: $color-white;
   }
 }
