fix: submenu styles

--- a/src/components/Admin/Sidebar/MenuItem/styles.module.scss
+++ b/src/components/Admin/Sidebar/MenuItem/styles.module.scss
@@ -57,11 +57,11 @@
 .sidebar-list__submenu {
   position: absolute;
   display: inline-flex;
-  padding: 0.1rem 1.4rem 0.4rem 1.4rem;
+  padding: 1.2rem;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  left: 7rem;
+  left: 9rem;
   top: 0;
   border-radius: 4px;
   border: $border-gray;
