--- a/src/components/Admin/Sidebar/MenuItem/SubmenuItem/styles.module.scss
+++ b/src/components/Admin/Sidebar/MenuItem/SubmenuItem/styles.module.scss
@@ -1,10 +1,13 @@
 .sidebar-list__item {
   transition: all 0.3s ease-in-out;
   gap: 0.4rem;
-  border-top: $border-black;
+  border-bottom: $border-black;
 
-  &:first-child {
-    border-top: none;
+  &:last-child {
+    border-bottom: none;
+    &.sidebar-list__button--extended {
+      border-bottom: $border-black;
+    }
   }
 }
 
