fix: add pressed color on links

--- a/src/components/MainPage/Footer/styles.module.scss
+++ b/src/components/MainPage/Footer/styles.module.scss
@@ -64,9 +64,9 @@
   &:focus {
     color: $color-accent;
   }
-  // &:active {
-  //   color: $color-started;
-  // }
+  &:active {
+    color: $color-pressed-btn;
+  }
 }
 
 .footer-list__item:not(:last-child) {
@@ -98,11 +98,11 @@
     }
   }
 
-  // &:active {
-  //   .footer-social-link__svg {
-  //     fill: $color-started;
-  //   }
-  // }
+  &:active {
+    .footer-social-link__svg {
+      fill: $color-pressed-btn;
+    }
+  }
 }
 
 .footer__license {
