fix: selector type

--- a/src/components/MainPage/Footer/styles.module.scss
+++ b/src/components/MainPage/Footer/styles.module.scss
@@ -48,10 +48,8 @@
   }
 }
 
-.footer-list--underlined {
-  .footer-list__link {
-    text-decoration: underline;
-  }
+.footer-list--underlined .footer-list__link {
+  text-decoration: underline;
 }
 
 .footer-list__link {
