--- a/src/components/MainPage/Partners/styles.module.scss
+++ b/src/components/MainPage/Partners/styles.module.scss
@@ -67,7 +67,7 @@
 //}
 
 .partner {
-  margin-top: 12rem;
+  margin-bottom: 12rem;
 }
 
 .partner_title {
@@ -82,6 +82,5 @@
   line-height: 10rem;
   padding: 4rem 10rem;
 }
-.partner_item{
-
+.partner_item {
 }
