fix: refactor sliders;

--- a/src/components/MainPage/Reviews/styles.module.scss
+++ b/src/components/MainPage/Reviews/styles.module.scss
@@ -56,11 +56,11 @@
   padding: 0 17rem;
 }
 .slider_item img {
-  width: 11.5rem;
-  height: 11.5rem;
-  border-radius: 50%;
-  object-fit: cover;
-  text-align: center;
+  // width: 11.5rem;
+  // height: 11.5rem;
+  // border-radius: 50%;
+  // object-fit: cover;
+  // text-align: center;
 }
 .custom_dots {
   display: flex;
