--- a/src/components/common/InputFields/TextInput/styles.module.scss
+++ b/src/components/common/InputFields/TextInput/styles.module.scss
@@ -1,10 +1,10 @@
 .container {
-  width: 100%;
+  width: 32.6rem;
 }
 
 .title {
   font-size: 1.6rem;
-  margin-bottom: 3.2rem;
+  // margin-bottom: 3.2rem;
   font-weight: 600;
   color: $color-neutral-text;
   margin-bottom: 0.4rem;
