--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,3 +12,11 @@ body {
   @apply h-screen;
   @apply bg-white;
 }
+
+@layer utilities{
+  .flex-center{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
