--- a/src/components/Admin/Sidebar/MenuItem/styles.module.scss
+++ b/src/components/Admin/Sidebar/MenuItem/styles.module.scss
@@ -1,25 +1,25 @@
 .sidebar-list__item {
-  display: flex;
-  position: relative;
-  flex-direction: column;
-  transition: all 0.3s ease-in-out;
-  gap: 0.4rem;
+  // display: flex;
+  // position: relative;
+  // flex-direction: column;
+  // transition: all 0.3s ease-in-out;
+  // gap: 0.4rem;
 }
 
 .sidebar-list__button {
-  position: relative;
-  display: flex;
-  width: 4.7rem;
-  height: 4rem;
-  align-items: center;
-  justify-content: center;
-  font-size: 1.6rem;
-  cursor: pointer;
-  background-color: $color-white;
-  border: 0;
-  border-radius: 4px;
-  gap: 0.8rem;
-  transition: width 0.3s ease-in-out;
+  // position: relative;
+  // display: flex;
+  // width: 4.7rem;
+  // height: 4rem;
+  // align-items: center;
+  // justify-content: center;
+  // font-size: 1.6rem;
+  // cursor: pointer;
+  // background-color: $color-white;
+  // border: 0;
+  // border-radius: 4px;
+  // gap: 0.8rem;
+  // transition: width 0.3s ease-in-out;
 
   &--accent {
     background: $color-black;
@@ -42,7 +42,7 @@
   }
 
   &--extended {
-    padding: 0rem 1.2rem;
+    // padding: 0rem 1.2rem;
     width: 17.7rem;
     height: 4rem;
     justify-content: flex-start;
