fix: merge conflicts with nextjs branch

--- a/src/components/MainPage/Statistics/styles.module.scss
+++ b/src/components/MainPage/Statistics/styles.module.scss
@@ -1,5 +1,5 @@
 .statistic {
-  background: url('~@/assets/img/statBg.jpg');
+  // background: url('~@/assets/img/statBg.jpg');
   padding-top: 5.3rem;
   padding-bottom: 5.3rem;
   &__title {
